--- a/ansible/webserver/templates/tomcat.conf.j2
+++ b/ansible/webserver/templates/tomcat.conf.j2
@@ -4,22 +4,19 @@ server 127.0.0.1:8443 fail_timeout=0;
 }
 
 server {
-listen 80;
+listen 80 default_server;
+server_name _;
 return 301 https://$host$request_uri;
-client_max_body_size 0;
-chunked_transfer_encoding on;
 }
 
 server {
-listen 443;
+listen 443 ssl http2;
 
 ssl_certificate /etc/letsencrypt/live/{{ inventory_hostname }}/fullchain.pem;
 ssl_certificate_key /etc/letsencrypt/live/{{ inventory_hostname }}/privkey.pem;
 
 error_log /var/log/nginx/tomcat-error.log;
 access_log /var/log/nginx/tomcat-access.log;
-client_max_body_size 0;
-chunked_transfer_encoding on;
 
 location / {
 proxy_redirect off;
